фикс ошибок гитхаб